--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@pancakeswap-libs/uikit",
-  "version": "0.15.0",
-  "description": "Set of UI components for pancake projects",
+  "name": "storybook-visualizor",
+  "version": "0.0.1",
+  "description": "visualize components for Marble Marketplace projcet",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/pancakeswap/pancake-uikit",
+  "repository": "https://github.com/nakayamaiwao/storybook",
   "license": "MIT",
   "scripts": {
     "build": "rm -rf ./dist && rollup -c && tsc -d --emitDeclarationOnly --declarationDir dist",
