--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/preset-env": "^7.12.16",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@pancakeswap-libs/eslint-config-pancake": "0.1.0",
@@ -66,6 +64,8 @@
     "styled-components": "^5.2.0"
   },
   "dependencies": {
+    "@babel/core": "7.18.0",
+    "@babel/preset-env": "7.18.0",
     "@chakra-ui/react": "^2.6.1",
     "@splinetool/react-spline": "^2.2.6",
     "@types/lodash": "^4.14.162",
@@ -84,6 +84,8 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
+    "react-script": "^2.0.5",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
     "styled-system": "^5.1.5",
     "ts-jest": "^29.1.0",
